# Vanilla

./: CMakeLists.txt  LICENSE  README.md
header/: activation_functions.hpp  init.hpp  model.hpp  pretty_print.hpp  train.hpp
src/: main.cpp  model.cpp  train.cpp
